Huge JS diet. 1) Ported the gt_hide_tabs and gt_show_tab functions to js/collapse.js 2) Ported the js/collapse.js to base.js. Dropped the js/collapse.js file. 3) Base62 and variable shrink compression on: lib/mootools/mootools.js (already had done that earlier) lib/jscalendar/calendar.js lib/jscalendar/calendar-setup.js js/base.js js/calendar.js 4) Base62 compression on: modules/projectdesigner/index.js modules/tasks/addedit.js 5) Modified the ui.classes/ui.class.php to support the new structure 6) Fixed a issue with the bold of the tabs names when using js_tabs 7) Added _uncompressed files to all compressed js files. Because we will need that :)
git-svn-id: https://web2project.svn.sourceforge.net/svnroot/web2project@105 cef3e9b6-683d-0410-b475-c2bd3a4d0f1e

--- a/trunk/style/wps-redmond/main.css
+++ b/trunk/style/wps-redmond/main.css
@@ -353,12 +353,14 @@ A.hdr:link, A.hdr:active, A.hdr:visited {
 td.tabon {
 	background: #D4D0C8;
     background-image: url('tabSelectedBg.png');
+        font-weight: bold; 
 }
 td.taboff {
 	background: #D4D0C8;
 	background-image: url('tabBg.png');
     background-position : bottom;
     background-repeat   : repeat-x;
+        font-weight: normal; 
 	}
 td.tabsp {
 	border-bottom: solid #808080 1px;
